데이터 쓰기 함수 추가
-키넥트 관련 함수들 추가 예정

--- a/RobotPathDataRecorder/RobotPathDataRecorder/RobotPathDataRecorder.vcxproj
+++ b/RobotPathDataRecorder/RobotPathDataRecorder/RobotPathDataRecorder.vcxproj
@@ -94,6 +94,7 @@
     <ClInclude Include="Robot\DynamixelPro.h" />
     <ClInclude Include="Robot\MX_controller.h" />
     <ClInclude Include="Robot\RobotArm.h" />
+    <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
