--- a/RobotPathDataRecorder/RobotPathDataRecorder/RobotPathDataRecorder.vcxproj.filters
+++ b/RobotPathDataRecorder/RobotPathDataRecorder/RobotPathDataRecorder.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="BlobLabeling.h">
       <Filter>ColorBasedTracker</Filter>
     </ClInclude>
+    <ClInclude Include="stdafx.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
